[package]
name = "rust-p2p-app"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "p2p-core",
    "p2p-crypto", 
    "p2p-network",
    "p2p-files",
    "p2p-tor",
    "p2p-dashboard",
    "p2p-client",
    "p2p-updater"
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"

# Networking
libp2p = "0.53"
quinn = "0.10"
async-trait = "0.1"
dashmap = "5.5"
parking_lot = "0.12"

# Crypto
ring = "0.17"
ed25519-dalek = { version = "2.0", features = ["serde"] }
aes-gcm = "0.10"
sha2 = "0.10"

# Web framework
actix-web = "4.0"
actix-cors = "0.6"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "postgres"] }

# Tor
arti-client = "0.11"
tor-rtcompat = "0.9"

# File operations
walkdir = "2.0"
futures = "0.3"

# Serialization
bincode = "1.3"

# Configuration
config = "0.13"
clap = { version = "4.0", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true


