[package]
name = "p2p-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
bincode = { workspace = true }
config = { workspace = true }
clap = { workspace = true }
hex = "0.4"
toml = "0.8"
rand = "0.8"

