[package]
name = "p2p-updater"
version = "0.1.0"
edition = "2024"

[dependencies]
p2p-core = { path = "../p2p-core" }
ed25519-dalek = { workspace = true }
tokio = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
base64 = "0.21"
